added GetStudentsByClassId route
